<resources>
    <string name="app_name">recipes</string>
    <string name="dish">фондан</string>
    <string name="titleList">ингредиенты</string>
    <string name="titleSteps">шаги приготовления</string>
    <string name="list">яйца: 2 шт сахарная пудра: 60 г</string>
    <string name="steps">1. растопите сливочное масло и шоколад на водяной бане, в турке или в микроволновке\n2. в другой миске смешайте сахарную пудру с яйцами\n3. добавьте муку и перемешайте\n4. полученную смесь соедините с маслом и шоколадом и перемешайте до образвания однородной массы\n5. разлейте по формам и выпекайте 6-7 минут при 175°C\n6. оставьте фонданы в выключенной духовке на 1 минуту</string>
</resources>