<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/dish"
    tools:context=".RecipeFondant">

    <TextView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/list"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/titleList"
        app:layout_constraintTop_toBottomOf="@+id/titleList" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="55dp"
        android:text="@string/steps"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSteps" />

    <TextView
        android:id="@+id/titleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/titleList"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titleSteps"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/steps"
        app:layout_constraintTop_toBottomOf="@+id/list" />

</androidx.constraintlayout.widget.ConstraintLayout>